# cirno

./: COPYING  Makefile  cirno.cabal
examples/: Cirno.hs  Echo.hs
src/Network/: XMPP.hs
src/Network/XMPP/: Auth.hs  JID.hs  LegacyAuth.hs  Monad.hs  Stanzas.hs  TCPConnection.hs  Utils.hs  XML.hs  XMPPConnection.hs
tests/: Tests.hs
tests/Network/XMPP/JID/: Tests.hs
