Name:          cirno
Version:       0.0.1
License:       BSD3
Author:        Magnus Henoch,
               Kagami Hiiragi <kagami@genshiken.org>
Maintainer:    Kagami Hiiragi <kagami@genshiken.org>
Homepage:      https://github.com/Kagami/cirno
Category:      Network
Stability:     Experimental
Synopsis:      Haskell XMPP library, the successor of the XMPP lib
Description:   Haskell XMPP library, the successor of the XMPP lib.
               Package contains simple echo bot example "cirno".

Build-type:    Simple
Cabal-version: >= 1.2

Library
    Exposed-modules: Network.XMPP
    Other-modules:   Network.XMPP.JID
                     Network.XMPP.Utils

    GHC-options:     -Wall
    Hs-source-dirs:  src
    Extensions:      OverloadedStrings
                     RecordWildCards

    Build-depends:   base == 4.*
                   , text == 0.11.*

Executable cirno
    Main-is:        Cirno.hs

    GHC-options:    -Wall
    Hs-source-dirs: src, examples
    Extensions:     OverloadedStrings
                    RecordWildCards

Test-suite cirno-tests
    Main-is:        Tests.hs

    GHC-options:    -Wall
    Hs-source-dirs: src, tests
    Extensions:     OverloadedStrings
                    RecordWildCards
    Type:           exitcode-stdio-1.0

    Build-depends:  test-framework             == 0.6.*
                  , test-framework-hunit       == 0.2.*
                  , HUnit                      == 1.2.*
