Name:          cirno
Version:       0.0.1
License:       BSD3
License-file:  COPYING
Author:        Magnus Henoch,
               Kagami Hiiragi <kagami@genshiken.org>
Maintainer:    Kagami Hiiragi <kagami@genshiken.org>
Homepage:      https://github.com/Kagami/cirno
Category:      Network
Stability:     Experimental
Synopsis:      Dumb XMPP library, the successor of the XMPP lib
Description:   Dumb XMPP library, the successor of the XMPP lib.
               Package contains simple echo bot example "cirno".

Build-type:    Simple
Cabal-version: >= 1.10

Source-repository head
    Type:     git
    Location: https://github.com/Kagami/cirno.git

Library
    Exposed-modules:    Network.XMPP
    Other-modules:      Network.XMPP.JID
                        Network.XMPP.Monad
                        Network.XMPP.XML
                        Network.XMPP.XMPPConnection
                        Network.XMPP.Utils

    GHC-options:        -Wall -fno-warn-unused-do-bind
    Hs-source-dirs:     src
    Default-language:   Haskell98
    Default-extensions: OverloadedStrings
                        RecordWildCards
                        GeneralizedNewtypeDeriving
                        ExistentialQuantification

    Build-depends:      base       == 4.*
                      , text       == 0.11.*
                      , mtl        == 2.0.*
                      , stm        == 2.4.*
                      , containers == 0.4.*
                      , bytestring == 0.9.*
                      , parsec     == 3.1.*

Executable cirno
    Main-is:            Cirno.hs

    GHC-options:        -Wall
    Hs-source-dirs:     src, examples
    Default-language:   Haskell98
    Default-extensions: OverloadedStrings
                        RecordWildCards

    Build-depends:      base == 4.*
                      , text == 0.11.*

Test-suite cirno-tests
    Main-is:            Tests.hs

    GHC-options:        -Wall -fno-warn-unused-do-bind
    Hs-source-dirs:     src, tests
    Default-language:   Haskell98
    Default-extensions: OverloadedStrings
                        RecordWildCards
                        GeneralizedNewtypeDeriving
                        ExistentialQuantification
    Type:               exitcode-stdio-1.0

    Build-depends:      base                 == 4.*
                      , text                 == 0.11.*
                      , mtl                  == 2.0.*
                      , stm                  == 2.4.*
                      , containers           == 0.4.*
                      , bytestring           == 0.9.*
                      , parsec               == 3.1.*
                      , test-framework       == 0.6.*
                      , test-framework-hunit == 0.2.*
                      , HUnit                == 1.2.*
