Name:          cirno
Version:       0.0.1
License:       BSD3
License-file:  COPYING
Author:        Magnus Henoch,
               Kagami Hiiragi <kagami@genshiken.org>
Maintainer:    Kagami Hiiragi <kagami@genshiken.org>
Homepage:      https://github.com/Kagami/cirno
Category:      Network
Stability:     Experimental
Synopsis:      Dumb XMPP library, the successor of the XMPP lib
Description:   Dumb XMPP library, the successor of the XMPP lib.
               Package contains simple echo bot example "cirno".

Build-type:    Simple
Cabal-version: >= 1.7

Source-repository head
    Type:     git
    Location: https://github.com/Kagami/cirno.git

Flag debug
    Description: Compile with debug output.
    Default:     False

Library
    Exposed-modules: Network.XMPP
    Other-modules:   Network.XMPP.JID
                     Network.XMPP.Monad
                     Network.XMPP.XML
                     Network.XMPP.Stanzas
                     Network.XMPP.XMPPConnection
                     Network.XMPP.TCPConnection
                     Network.XMPP.Utils
    GHC-options:     -Wall
    HS-source-dirs:  src
    Extensions:      OverloadedStrings
                     RecordWildCards
                     GeneralizedNewtypeDeriving
                     ExistentialQuantification
                     CPP
    Build-depends:   base       == 4.*
                   , text       == 0.11.*
                   , mtl        == 2.0.*
                   , stm        == 2.4.*
                   , containers == 0.4.*
                   , bytestring == 0.9.*
                   , parsec     == 3.1.*
                   , network    == 2.4.*
    if flag(debug)
        CPP-options: -DDEBUG

Test-suite cirno-tests
    Main-is:         Tests.hs
    GHC-options:     -Wall
    HS-source-dirs:  src, tests
    Extensions:      OverloadedStrings
                     RecordWildCards
                     GeneralizedNewtypeDeriving
                     ExistentialQuantification
                     CPP
    Type:            exitcode-stdio-1.0
    Build-depends:   test-framework       == 0.6.*
                   , test-framework-hunit == 0.2.*
                   , HUnit                == 1.2.*
    if flag(debug)
        CPP-options: -DDEBUG
